--- a/Challenges/Day_04/style.css
+++ b/Challenges/Day_04/style.css
@@ -5,7 +5,7 @@ body{
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color:whitesmoke;
+  background-color:rgb(191, 159, 159);
 }
 
 input[type="checkbox"]{
