day15 change background

--- a/Challenges/Day_15/style.css
+++ b/Challenges/Day_15/style.css
@@ -3,7 +3,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color:#ECC2CE;
+  background-color:#de7a96;
 }
 
 span {
